@@ -45,7 +45,7 @@
         <version.hoot.libs>[2020.0101.0101,)</version.hoot.libs>
 
         <!-- keep ANTLR versions in sync -->
-        <version.antlr>4.13.1</version.antlr>
+        <version.antlr>4.13.2</version.antlr>
         <version.antlr.st>4.3.4</version.antlr.st>
         <version.janino>3.1.12</version.janino>
 
@@ -66,11 +66,13 @@
         <gitlab-group>9887672</gitlab-group>
         <gitlab-project>10019964</gitlab-project>
 
+        <no-lint-check>-Xlint:none</no-lint-check>
+        <prefer-time-zone>-Duser.timezone=America/Los_Angeles</prefer-time-zone>
         <run-headless>-Djava.awt.headless=true</run-headless>
         <memory-args>-Xmx1024m -Xms1024m</memory-args>
         <compiler-args></compiler-args> <!-- default = none, see profile for 21 below -->
         <no-path-check>-Djdk.net.URLClassPath.disableClassPathURLCheck=true</no-path-check>
-        <test-args>${memory-args} ${no-path-check} ${run-headless}</test-args>
+        <test-args>${memory-args} ${no-path-check} ${run-headless} ${prefer-time-zone}</test-args>
 
         <cloudsmith-libs>https://maven.cloudsmith.io/educery/hoot-libs/</cloudsmith-libs>
         <github-hosted-libs>https://maven.pkg.github.com/nikboyd/hoot-smalltalk/</github-hosted-libs>
@@ -218,7 +220,7 @@
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
-                <version>3.13.0</version>
+                <version>3.20.0</version>
             </dependency>
             <dependency>
                 <groupId>commons-io</groupId>
@@ -390,7 +392,7 @@
             <id>java-21-plus</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
-                <jdk>[21,)</jdk>
+                <jdk>[21,25)</jdk>
             </activation>
             <properties>
                 <maven.compiler.source>11</maven.compiler.source>
@@ -398,6 +400,22 @@
                 <maven.compiler.release>21</maven.compiler.release>
                 <version.spring-boot>3.1.4</version.spring-boot>
                 <version.maven.jacoco>0.8.12</version.maven.jacoco>
+                <compiler-args>-proc:full</compiler-args>
+            </properties>
+        </profile>
+        <profile>
+            <id>java-25</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+                <jdk>[25,)</jdk>
+            </activation>
+            <properties>
+                <maven.compiler.source>11</maven.compiler.source>
+                <maven.compiler.target>21</maven.compiler.target>
+                <maven.compiler.release>21</maven.compiler.release>
+                <version.spring-boot>3.1.4</version.spring-boot>
+                <version.maven.jacoco>0.8.13</version.maven.jacoco>
+                <version.maven.surefire>3.5.4</version.maven.surefire>
                 <compiler-args>-proc:full</compiler-args>
             </properties>
         </profile>
